add custom JRE to docker